--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -5,15 +5,15 @@
 {% block body %}
 <main>
     <section id="hero">
-        <div id="parallax-bg"></div>
+        <div id="hero-background"></div>
         <div id="hero-box">
-            <h2 class="fc-fg">Chaque semaine, de nouvelles activités pour réunir les étudiants !</h2>
-            <h3 class="fc-cta">Rejoins-nous maintenant!</h3>
-            <a href="#register" class="btn bg-cta fc-fg">M'inscrire</a>
+            <h1 class="fc-fg margin-bottom">Chaque semaine, de nouvelles activités pour réunir les étudiants !</h1>
+            <h2 class="fc-cta">Rejoins-nous maintenant!</h2>
+            <a href="#register" class="btn bg-cta fc-fg margin-top">M'inscrire</a>
         </div>
     </section>
     <section id="register" class="bg-fg main-padding">
-        <h2>M'inscrire maintenant</h2>
+        <h1 class="fc-cta">M'inscrire maintenant</h1>
         {% include 'includes/register.html.twig' %}
     </section>
 </main>
