--- a/templates/includes/header.html.twig
+++ b/templates/includes/header.html.twig
@@ -7,10 +7,7 @@
                 version="1.1"
                 id="svg-logo"
                 xmlns="http://www.w3.org/2000/svg"
-                xmlns:svg="http://www.w3.org/2000/svg"
-                xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
-                xmlns:cc="http://creativecommons.org/ns#"
-                xmlns:dc="http://purl.org/dc/elements/1.1/">
+                xmlns:svg="http://www.w3.org/2000/svg">
             <path class="fill-cta"
                   id="path920"
                   d="M 58.691406 0 C 55.400364 0 52.443459 0.68388769 49.822266 2.0527344 C 47.201069 3.4215811 45.147452 5.3289439 43.662109 7.7753906 C 42.595887 9.5106183 41.91618 11.412938 41.615234 13.478516 L 56.8125 13.478516 L 56.8125 18.5 L 41.613281 18.5 C 41.913846 20.573209 42.595014 22.488521 43.662109 24.246094 C 45.147452 26.663419 47.201069 28.556938 49.822266 29.925781 C 52.443459 31.294628 55.400364 31.978516 58.691406 31.978516 C 61.982472 31.978516 64.937393 31.294628 67.558594 29.925781 C 70.179783 28.556938 72.233411 26.663419 73.71875 24.246094 C 75.204093 21.799647 75.947266 19.048296 75.947266 15.990234 C 75.947266 12.932177 75.204093 10.192709 73.71875 7.7753906 C 72.233411 5.3289401 70.179783 3.4215811 67.558594 2.0527344 C 64.937397 0.68388769 61.982472 -5.9211895e-16 58.691406 0 z "
@@ -54,7 +51,7 @@
         <ul class="fc-fg">
             <li><a href="">Accueil</a></li>
             <li class="btn bg-cta"><a href="#register">M'inscrire</a></li>
-            <li class="btn bg-action"><a href="">Connexion</a></li>
+            <li class="btn bg-action"><a href="{{ path('app_login') }}">Connexion</a></li>
         </ul>
     </nav>
 </header>
