--- a/templates/includes/register.html.twig
+++ b/templates/includes/register.html.twig
@@ -10,7 +10,6 @@
         {{ form_row(registrationForm.birthDate) }}
         {{ form_row(registrationForm.campus) }}
         {{ form_row(registrationForm.agreeTerms) }}
-
-    <button type="submit" class="btn bg-cta">Créer un compte</button>
+    <button type="submit" class="btn bg-cta margin-top">Créer un compte</button>
     </fieldset>
 {{ form_end(registrationForm) }}
