--- a/templates/user_home/index.html.twig
+++ b/templates/user_home/index.html.twig
@@ -42,7 +42,7 @@
                             </div>
                             <div class="inline-group">
                                 <div>Clôture des inscriptions :</div>
-                                <time>{{ outing.closingTime }}</time>
+                                <time>{{ outing.closingDate }}</time>
                             </div>
                             <div class="participation">
                                 {% if app.user in outing.participants %}
