--- a/templates/user_home/index.html.twig
+++ b/templates/user_home/index.html.twig
@@ -23,6 +23,13 @@
                     <button type="submit" class="btn bg-action margin-top">Rechercher</button>
                 </fieldset>
             {{ form_end(searchForm) }}
+            {% if nbOfOutingsFound >= 0 %}
+                {% if nbOfOutingsFound is same as(0) %}
+                    <div>Désolé, nous n'avons trouvé aucune sortie correspondant à ces critères...</div>
+                {% else %}
+                    <div>Nous avons trouvé {{ nbOfOutingsFound }} sortie(s) correspondant à votre recherche!</div>
+                {% endif %}
+            {% endif %}
         </section>
         <section class="main-padding bg-dark">
             <h2 class="margin-bottom fc-fg">Les sorties</h2>
