--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Bienvenue sur OffCampus{% endblock %}
-
+{% block header %}{% include 'includes/header-visitor.html.twig' %}{% endblock %}
 {% block body %}
 <main>
     <section id="hero">
