--- a/templates/includes/header-visitor.html.twig
+++ b/templates/includes/header-visitor.html.twig
@@ -50,8 +50,8 @@
     <nav>
         <ul class="fc-fg">
             <li><a href="">Accueil</a></li>
-            <li class="btn bg-cta"><a href="">Créer une sortie</a></li>
-            <li class="btn bg-action"><a href="{{ path('app_logout') }}">Déconnexion</a></li>
+            <li class="btn bg-cta"><a href="#register">M'inscrire</a></li>
+            <li class="btn bg-action"><a href="{{ path('app_login') }}">Connexion</a></li>
         </ul>
     </nav>
 </header>
