--- a/templates/outing/view-outing.html.twig
+++ b/templates/outing/view-outing.html.twig
@@ -14,11 +14,11 @@
                     </div>
                     <div>
                         <div>Date et heure :</div>
-                        <div>{{outing.dayAndTime|date('dd/mm/YYYY')}} à {{outing.dayAndTime|date('H:i')}}</div>
+                        <div>{{outing.dayAndTime|date('d/m/Y')}} à {{outing.dayAndTime|date('H:i')}}</div>
                     </div>
                     <div>
                         <div>Date limite d'inscription :</div>
-                        <div>{{ outing.closingDate|date('dd/mm/YYYY') }}</div>
+                        <div>{{ outing.closingDate|date('d/m/Y') }}</div>
                     </div>
                     <div>
                         <div>Nombre de places :</div>
@@ -40,7 +40,7 @@
                     </div>
                     <div>
                         <div>Code Postal :</div>
-                        <div>{{ outing.locaton.zip }}</div>
+                        <div>{{ outing.location.zip }}</div>
                     </div>
                 </div>
             </div>
@@ -63,17 +63,18 @@
                     </tr>
                     </thead>
                     <tbody>
-                    {% for participant in participants %}
+                    {% for participant in outing.participants %}
                         <tr>
                             <td>{{ participant.campus.name }}</td>
                             <td>{{ participant.userName }}</td>
                             <td>{{ participant.firstName }} {{ participant.lastName }}</td>
                         </tr>
                     {% endfor %}
+
                     </tbody>
                 </table>
                 <div class="center-v-h fc-fg">
-                    <p>Il reste {{ outing.capacity.diff(outing.participants|length) }} places !</p>
+                    <p>Il reste {{ outing.capacity - outing.participants|length }} places !</p>
                     <a href="" class="btn bg-cta">M'inscrire à cette sortie</a>
                 </div>
             </div>
