--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -7,13 +7,13 @@
     <section id="hero">
         <div id="hero-background"></div>
         <div id="hero-box">
-            <h1 class="fc-fg margin-bottom">Chaque semaine, de nouvelles activités pour réunir les étudiants !</h1>
+            <h1 class="fc-fg margin-bottom-small">Chaque semaine, de nouvelles activités pour réunir les étudiants !</h1>
             <h2 class="fc-cta">Rejoins-nous maintenant!</h2>
             <a href="#register" class="btn bg-cta fc-fg margin-top">M'inscrire</a>
         </div>
     </section>
     <section id="register" class="bg-fg main-padding">
-        <h1 class="fc-cta">M'inscrire maintenant</h1>
+        <h1 class="fc-cta margin-bottom">M'inscrire maintenant</h1>
         {% include 'includes/register.html.twig' %}
     </section>
 </main>
