--- a/templates/includes/header-visitor.html.twig
+++ b/templates/includes/header-visitor.html.twig
@@ -49,7 +49,7 @@
     </div>
     <nav>
         <ul class="fc-fg">
-            <li><a href="">Accueil</a></li>
+            <li><a href="{{ path('home') }}">Accueil</a></li>
             <li class="btn bg-cta"><a href="#register">M'inscrire</a></li>
             <li class="btn bg-action"><a href="{{ path('app_login') }}">Connexion</a></li>
         </ul>
