--- a/templates/outing/form.html.twig
+++ b/templates/outing/form.html.twig
@@ -26,7 +26,7 @@
                 {{ form_row(outingForm.outingImage) }}
             </fieldset>
             {{ form_end(outingForm) }}
-            <div>
+            <div class="btn-group">
                 <button type="submit" class="btn bg-action margin-top">Créer</button>
             </div>
         </section>
